# volkanite

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.toml  vcpkg.json
models/: House_scene_01.fbx  LICENSE
scripts/: process_texture.sh
src/: main.cpp  pch.hpp
src/core/: Camera.hpp  Constants.hpp  CullingUtils.cpp  CullingUtils.hpp  Debug.hpp  DemoGame.hpp  DescriptorWriter.cpp  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  Exceptions.hpp  Font.cpp  Font.hpp  Geometry.hpp  Instance.cpp  Instance.hpp  InstanceRenderer.cpp  InstanceRenderer.hpp  Mesh.cpp  Mesh.hpp  MeshUtils.cpp  MeshUtils.hpp  OcclusionCuller.cpp  OcclusionCuller.hpp  PerFrameBuffer.cpp  PerFrameBuffer.hpp  Pipeline.cpp  Pipeline.hpp  PipelineBuilder.cpp  RenderObject.hpp  Renderer.cpp  Renderer.hpp  ShaderUtils.cpp  ShaderUtils.hpp  SubMesh.hpp  SwapChain.cpp  SwapChain.hpp  SwapChainHandler.cpp  SwapChainHandler.hpp  (+12 more)
src/engine/: Camera.hpp  Engine.cpp  Engine.hpp  Game.hpp  RenderObject.hpp
src/engine/internal/: Constants.hpp  CullingUtils.cpp  Debug.cpp  Debug.hpp  DescriptorWriter.cpp  DescriptorWriter.hpp  InstanceRenderer.cpp  InstanceRenderer.hpp  Material.hpp  MaterialBinding.hpp  Mesh.hpp  MeshUtils.cpp  MeshUtils.hpp  OcclusionCuller.cpp  OcclusionCuller.hpp  PerFrameBuffer.cpp  PipelineBuilder.cpp  PipelineBuilder.hpp  ShaderUtils.hpp  SubMesh.hpp  SwapChainHandler.cpp  SwapChainHandler.hpp  TerrainChunk.hpp  TerrainComputeBaker.cpp  TerrainComputeBaker.hpp  TerrainHeightMapBaker.cpp  TerrainHeightMapBaker.hpp  TerrainPatchRenderer.cpp  TerrainPatchRenderer.hpp  TerrainSystem.cpp  TerrainSystem.hpp  TerrainTypes.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  VulkanContext.cpp  VulkanContext.hpp  Window.cpp  Window.hpp
src/game/: DemoGame.cpp  DemoGame.hpp
src/shaders/: culling.slang  shader.slang  text.slang
src/shaders/cull/: CullInstances.slang  DepthToMip0.slang  Downsample.slang
src/shaders/terrain/: TerrainBakeHeight.slang  TerrainBakeNormal.slang
textures/: grassy-meadow1_orm.dds  layered-cliff_orm.dds  mossy-mud1_orm.dds  oxidized-metal-clad_orm.dds  sand-dunes1_orm.dds  snow-packed12_orm.dds
